--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
+  "license": "MIT",
   "devDependencies": {
-    "serverless": "^2.52.0"
+    "serverless": "^2.52.0",
+    "serverless-prune-plugin": "^1.5.1"
   }
 }
