--- a/package.json
+++ b/package.json
@@ -3,5 +3,6 @@
   "devDependencies": {
     "serverless": "^2.52.0",
     "serverless-prune-plugin": "^1.5.1"
-  }
+  },
+  "name": "ruby-template"
 }
